<resources>
    <string name="app_name">ManageApp</string>
    <string name="manager_app_clone">MANAGER APP CLONE</string>

    <string name="image_contentDescription">image</string>
    <string name="let_s_get_started_text">Let\'s Get started</string>
    <string name="intro_text_description">Collaborate and Plan Together Across Multiple Devices on Projemanag’s Minimalist Interface.</string>
    <string name="sign_up">SIGN UP</string>


    <!--START-->
    <string name="sign_up_description_text">Enter your name, email id and password, to register with us.</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_in">SIGN IN</string>
    <string name="please_wait">please wait</string>
    <string name="imageprofile">imageProfile</string>

    <string name="my_profile">My Profile</string>
    <string name="my_create">Create Board</string>

    <string name="sign_out">Sign Out</string>
    <string name="update">UPDATE</string>
    <string name="mobile">Mobile</string>
    <string name="addbutton">addButton</string>
    <string name="no_boards_are_available">No Boards are available!!</string>
    <!--END-->

    <!--START-->
    <string name="action_add_list">Add List</string>
    <string name="hint_list_name">List Name</string>
    <string name="action_add_card">Add Card</string>
    <string name="hint_card_name">Card Name</string>
    <string name="add_list">Add List</string>
    <string name="members">Members</string>
    <!--END-->

    <string name="add_member">Add Member</string>
    <string name="cancel">CANCEL</string>
    <string name="add">ADD</string>
    <string name="search_member">Add Member</string>

    <!--START-->
    <string name="label_color">Label Color</string>
    <string name="select_color">Select Color</string>
    <string name="select_members">Select Members</string>
    <string name="due_date">Due Date</string>
    <string name="select_due_date">Select Due Date</string>
    <!--END-->
    <string name="card_details">Card Details</string>

    <string name="delete_card">Delete Card</string>

    <string name="alert">Alert</string>
    <string name="confirmation_message_to_delete_card">Are you sure you want to delete card \'%1$s\'?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="str_select_label_color">Select Label Color</string>
    <string name="str_select_member">Select Member</string>


</resources>