<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/intro_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".IntroActivity">

    <TextView
        android:id="@+id/textViewAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/intro_screen_title_text_marginTop"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimaryAccent"
        android:textSize="@dimen/intro_screen_title_text_size"
        android:textStyle="bold"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/intro_screen_image_marginTop"
        android:contentDescription=""
        android:src="@drawable/ic_task_image"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/lets_get_started_text_marginTop"
        android:text="@string/let_s_get_started_text"
        android:textColor="@color/primary_text_color"
        android:textSize="@dimen/lets_get_started_text_size"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/intro_text_marginStartEnd"
        android:layout_marginTop="@dimen/intro_text_marginTop"
        android:layout_marginEnd="@dimen/intro_text_marginStartEnd"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/intro_text_line_spacing_extra"
        android:text="@string/intro_text_description"
        android:textColor="@color/secondary_text_color"
        android:textSize="@dimen/intro_text_size"/>

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/btn_marginStartEnd"
        android:layout_marginTop="@dimen/intro_screen_sign_in_btn_marginTop"
        android:layout_marginEnd="@dimen/btn_marginStartEnd"
        android:background="@drawable/shape_button_rounded"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:onClick="onSignIn"
        android:paddingTop="@dimen/btn_paddingTopBottom"
        android:paddingBottom="@dimen/btn_paddingTopBottom"
        android:text="@string/sign_in"
        android:textColor="@android:color/white"
        android:textSize="@dimen/btn_text_size"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/btn_marginStartEnd"
        android:layout_marginTop="@dimen/intro_screen_sign_up_btn_marginTop"
        android:layout_marginEnd="@dimen/btn_marginStartEnd"
        android:background="@drawable/while_border_shape_button_rounded"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:onClick="onSignUp"
        android:paddingTop="@dimen/btn_paddingTopBottom"
        android:paddingBottom="@dimen/btn_paddingTopBottom"
        android:text="@string/sign_up"
        android:textColor="@color/colorPrimaryAccent"
        android:textSize="@dimen/btn_text_size"/>


</LinearLayout>