<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.MyProfileActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_profile_activity"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ic_background">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/authentication_screen_marginStartEnd"
                android:layout_marginTop="@dimen/authentication_screen_card_view_marginTop"
                android:layout_marginEnd="@dimen/authentication_screen_marginStartEnd"
                android:elevation="@dimen/card_view_elevation"
                android:theme="@style/Widget.MaterialComponents.CardView"
                app:cardCornerRadius="@dimen/card_view_corner_radius">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/card_view_layout_content_padding">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/iv_profile_image"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:onClick="onChangeImage"
                        android:src="@drawable/ic_user_place_holder"
                        />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/TextInputLayoutAppearance"
                        android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                        android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/name"
                            android:textColor="@color/black"
                            android:inputType="textEmailAddress"
                            android:textSize="@dimen/et_text_size" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/TextInputLayoutAppearance"
                        android:layout_marginTop="@dimen/authentication_screen_til_marginTop"
                        android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                        android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email"
                            android:textColor="@color/black"
                            android:inputType="textEmailAddress"
                            android:textSize="@dimen/et_text_size" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/TextInputLayoutAppearance"
                        android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                        android:layout_marginTop="@dimen/authentication_screen_til_marginTop"
                        android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/mobile"
                            android:textColor="@color/black"
                            android:inputType="text"
                            android:textSize="@dimen/et_text_size" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/btn_update"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/btn_marginStartEnd"
                        android:layout_marginTop="@dimen/sign_up_screen_btn_marginTop"
                        android:layout_marginEnd="@dimen/btn_marginStartEnd"
                        android:background="@drawable/shape_button_rounded"
                        android:foreground="?attr/selectableItemBackground"
                        android:gravity="center"
                        android:paddingTop="@dimen/btn_paddingTopBottom"
                        android:paddingBottom="@dimen/btn_paddingTopBottom"
                        android:text="@string/update"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/btn_text_size" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

</LinearLayout>